# TemaPOO

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TemaPOO.cpp  TemaPOO.h  Tema_1.cpp  Tema_1.h  Tema_2.cpp  Tema_2.h  autor.cpp  autor.h  carte.cpp  carte.h  coverage.TemaPOO.cpp.c8065e121e9fce4aa195c9cf1b29f2a4.html  coverage.TemaPOO.cpp.html  coverage.Tema_1.cpp.html  coverage.autor.cpp.c93fdd8da80355828ba65985082ae677.html  coverage.autor.cpp.html  coverage.autor.h.cc63a5e6442dae4bd009bd2489b466e4.html  coverage.autor.h.html  coverage.carte.cpp.0408e072de553c5544f899b63b0f2344.html  coverage.carte.cpp.html  coverage.carte.h.e4f75b9206a3ef8ad3dfdc0a62a85f75.html  coverage.carte.h.html  coverage.editura.cpp.f5188101dc108b74556eb0534bc790f4.html  coverage.editura.cpp.html  coverage.editura.h.ed430d7e149899cd9cd6fc77cf9f050c.html  coverage.editura.h.html  coverage.html  editura.cpp  editura.h  informati.txt
.github/workflows/: c-cpp.yml
